tests/local_fn_duplicate_bad.hop
fn main() {
	fn double(x int) int {
		return x * 2
	}
	fn double(x int) int {
		return x + x
	}
	_ = double
}
